Fix video stretching layout

--- a/src/index.css
+++ b/src/index.css
@@ -846,6 +846,9 @@ body.category-page .sticky-nav {
 .main-display-media {
   width: 100%;
   height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   object-fit: contain;
   display: block;
 }
